fix: bug -> visible messages but delete

--- a/rag-webapp/src/css/main-interface/prompt.css
+++ b/rag-webapp/src/css/main-interface/prompt.css
@@ -121,3 +121,12 @@
     background-color: #eaeaea;
     border-radius: 4px;
 }
+
+.no-chat-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 25%;
+}
